2004-09-28  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Calls the selected URL in a combo box.

2004-09-28  Damien Sandras  <dsandras@gnome.org>

	* src/calls_history_window.cpp, src/calls_history_window.h, 
	src/main_window.cpp: Reimplemented a combo box.

2004-09-28  Damien Sandras  <dsandras@gnome.org>

	* lib/gnome_prefs_window.c: Fixed bug reported by Johnny. Thanks!

	* lib/contacts/gm_contacts-remote.cpp, lib/contacts/gm_contacts.h: 
	Bug fixes.

	* src/calls_history_window.cpp, src/calls_history_window.h, 
	src/endpoint.cpp, src/urlhandler.cpp: Back to a notifier based model
	to fix the bug reported by Josep. Thanks!

2004-09-26  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Same change as below.

2004-09-26  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Add a broken base for broken ILS.

	* lib/contacts/gm_contacts-remote.cpp: Do not work without a base.

2004-09-26  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp, src/addressbook_window.cpp:
	Added back search on the address book.

2004-09-25  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.

	* src/calls_history_window.cpp, src/endpoint.cpp, src/endpoint.h,
	src/main_window.cpp, src/main_window.h: Replaced unanswered calls by
	missed calls. Do not consider calls you actively reject as missed
	calls. Added display of the number of missed calls in the status bar.
	The number of missed calls is reset when you acknowledge it by
	clicking in the status bar.

2004-09-23  Damien Sandras  <dsandras@gnome.org>

	* src/calls_history_window.cpp: Added #include for translations.

2004-09-23  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed menu tooltips.

2004-09-23  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.

	* src/addressbook_window.cpp, src/addressbook_window.h, 