@@ -190,10 +190,11 @@ gnomemeeting_remote_addressbook_get_contacts (GmAddressbook *addressbook,
     else if (url)
       filter = g_strdup_printf ("(&(cn=%)(rfc822mailbox=%%%s%%))", url);
   }  
-  else
-      filter = g_strdup_printf ("(&(cn=*)(|(givenname=*%s)(surname=*%s))(rfc822mailbox=*%s))", fullname?fullname:"", fullname?fullname:"", url?url:"");
-  cout << filter << endl << flush;
+  else {
     
+    filter = g_strdup_printf ("(&(cn=*)(|(givenname=*%s%s)(surname=*%s%s))(rfc822mailbox=*%s%s))", fullname?fullname:"", fullname?"*":"", fullname?fullname:"", fullname?"*":"", url?url:"", url?"*":"");
+  }
+  
   if (ldap.Search (context, 
 		   filter, 
 		   attrs, 
