@@ -1,3 +1,13 @@
+2004-09-29  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/contacts/gm_contacts-remote.cpp: Fixed search on LDAP servers.
+
+	* src/callbacks.cpp: Updated email of Vincent Deroo.
+
+	* src/main_window.cpp: Converted toolbar code to GTK+2.4, fixed
+	remaining problems with the new history combo box, and removed now
+	unuseful hack as the problem has been adressed by GTK+2.4.
+
 2004-09-28  Damien Sandras  <dsandras@gnome.org>
 
 	* src/main_window.cpp: Calls the selected URL in a combo box.
